# secretary_problem

./: .gitattributes  README.md  Untitled2.ipynb  agent.py  problem.ipynb  pyproject.toml  requirements.txt  setup.py
notebooks/: problem.ipynb
secretary_package/: __init__.py  learn.py  secretary.py  test.py  utilfunctions.py
src/secretary_package/: __init__.py  agent.py  environment.py  learn.py  secretary.py  simulation.py  test.py  threshold_agent.py  utilfunctions.py
src/tests/: tests_environment.py  tests_threshold_agents.py  tests_utillfunctions.py
training-results/Q-target/trained-agents/: last-agent.keras
