[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "secretary_package"
version = "0.1.0"
description = "My awesome package"
authors = [{ name = "Denys Raduchych", email = "raduchych.denys@gmail.com" }]
dependencies = []

[tool.setuptools]
package-dir = {"" = "secretary_package"}