[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "secretary_package"
version = "0.1.0"
description = "My awesome package"
authors = [{ name = "Olesia Raduchych", email = "lesyaraduchyc@gmail.com" }]
dependencies = ["numpy"]


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["secretary_package*"]